--- a/src/components/project/Project.css
+++ b/src/components/project/Project.css
@@ -1,5 +1,5 @@
 .project-card {
-    padding: 0.75rem;
+    padding: 0.75rem 0.75rem 0.75rem 0;
     border: 0;
     flex-basis: 40%;
     flex-grow: 0;
